pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMethodNotImplemented3.pkl
extends "../../input-helper/classes/AbstractModule.pkl"
